--- a/pages/3635.html
+++ b/pages/3635.html
@@ -310,10 +310,10 @@ margin-left: 0em;
  This entry is about the document</p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Tim+Porter'>Tim Porter</a>, <em>The Crossed Menagerie: an introduction to crossed gadgetry and cohomology in algebra and topology</em>. (Notes, in part, prepared for the <em>XVI Encuentro Rioplatense de Algebra y Geometría Algebraica</em>, in Buenos Aires, 12-15 December 2006, and for course MATH5312, Spring-Summer term 2007, University of Ottawa) (<span class='newWikiWord'>pdf<a href='/nlab/files/menagerie12.pdf'>?</a></span>)</li>
+<li><a class='existingWikiWord' href='/nlab/show/Tim+Porter'>Tim Porter</a>, <em>The Crossed Menagerie: an introduction to crossed gadgetry and cohomology in algebra and topology</em>. (Notes, in part, prepared for the <em>XVI Encuentro Rioplatense de Algebra y Geometría Algebraica</em>, in Buenos Aires, 12-15 December 2006, and for course MATH5312, Spring-Summer term 2007, University of Ottawa) (<a class='existingWikiWord' href='/nlab/files/menagerie12a.pdf' title=''>pdf</a>)</li>
 </ul>
 
-<p>This is an ongoing set of notes outlining an approach to <a class='existingWikiWord' href='/nlab/show/nonabelian+cohomology'>nonabelian cohomology</a>, <a class='existingWikiWord' href='/nlab/show/stack'>stack</a>s, etc., and Grothendieck’s conjectured extension of ‘Galois-Poincaré theory’. The title refers to the array of strange beasties that occur as generalisations of <a class='existingWikiWord' href='/nlab/show/crossed+module'>crossed modules</a>. (The present version is over 921 pages long, and is changing quite often. A fairly stable version (but up-dates are planned shortly!) is available as a download, <span class='newWikiWord'>here<a href='/nlab/files/menagerie12.pdf'>?</a></span>.</p>
+<p>This is an ongoing set of notes outlining an approach to <a class='existingWikiWord' href='/nlab/show/nonabelian+cohomology'>nonabelian cohomology</a>, <a class='existingWikiWord' href='/nlab/show/stack'>stack</a>s, etc., and Grothendieck’s conjectured extension of ‘Galois-Poincaré theory’. The title refers to the array of strange beasties that occur as generalisations of <a class='existingWikiWord' href='/nlab/show/crossed+module'>crossed modules</a>. (The present version is over 1004 pages long, and is changing quite often. A fairly stable version (but up-dates are planned shortly!) is available as a download, <a class='existingWikiWord' href='/nlab/files/menagerie12a.pdf' title=''>here</a>.</p>
 
 <p>These notes, or at least the first few chapters of them, acted as course notes for a 4 lecture course in Buenos Aires, and later on for a course on cohomology in Ottawa.</p>
 
@@ -407,7 +407,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p>4.3 Cat<math class='maruku-mathml' display='inline' id='mathml_647fd610d6796cd5c18d19893967c2eb16398704_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mo></mo><mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>^n</annotation></semantics></math> -groups and crossed <math class='maruku-mathml' display='inline' id='mathml_647fd610d6796cd5c18d19893967c2eb16398704_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-cubes</p>
+<p>4.3 Cat<math class='maruku-mathml' display='inline' id='mathml_8d882db47105d2eac0f33e91b190862481164f42_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mo></mo><mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>^n</annotation></semantics></math> -groups and crossed <math class='maruku-mathml' display='inline' id='mathml_8d882db47105d2eac0f33e91b190862481164f42_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-cubes</p>
 </li>
 
 <li>
@@ -441,7 +441,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p>5.5 <math class='maruku-mathml' display='inline' id='mathml_647fd610d6796cd5c18d19893967c2eb16398704_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mover><mi>W</mi><mo>¯</mo></mover></mrow><annotation encoding='application/x-tex'>\overline{W}</annotation></semantics></math>, <math class='maruku-mathml' display='inline' id='mathml_647fd610d6796cd5c18d19893967c2eb16398704_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>W</mi></mrow><annotation encoding='application/x-tex'>W</annotation></semantics></math>, and twisted Cartesian products</p>
+<p>5.5 <math class='maruku-mathml' display='inline' id='mathml_8d882db47105d2eac0f33e91b190862481164f42_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mover><mi>W</mi><mo>¯</mo></mover></mrow><annotation encoding='application/x-tex'>\overline{W}</annotation></semantics></math>, <math class='maruku-mathml' display='inline' id='mathml_8d882db47105d2eac0f33e91b190862481164f42_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>W</mi></mrow><annotation encoding='application/x-tex'>W</annotation></semantics></math>, and twisted Cartesian products</p>
 </li>
 
 <li>
@@ -475,7 +475,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p>6.6 Relative <math class='maruku-mathml' display='inline' id='mathml_647fd610d6796cd5c18d19893967c2eb16398704_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>M</mi></mrow><annotation encoding='application/x-tex'>M</annotation></semantics></math>-torsors</p>
+<p>6.6 Relative <math class='maruku-mathml' display='inline' id='mathml_8d882db47105d2eac0f33e91b190862481164f42_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>M</mi></mrow><annotation encoding='application/x-tex'>M</annotation></semantics></math>-torsors</p>
 </li>
 </ul>
 </li>
@@ -612,14 +612,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on April 17, 2018 at 08:33:35.
+  Last revised on April 17, 2018 at 12:55:44.
   See the <a href="https://ncatlab.org/nlab/history/Crossed Menagerie" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Crossed+Menagerie" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Crossed+Menagerie/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/Crossed+Menagerie" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Crossed+Menagerie" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Crossed+Menagerie" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Crossed+Menagerie/15" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(15 revisions)</span> | <a href="/nlab/show/diff/Crossed+Menagerie" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Crossed+Menagerie" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
 
   <span class="views">
     | Views:
