--- a/pages/6812.html
+++ b/pages/6812.html
@@ -290,12 +290,10 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -329,7 +327,7 @@ margin-left: 0em;
 <p>on the beginnings of <a class='existingWikiWord' href='/nlab/show/supergravity'>supergravity</a>:</p>
 
 <ul>
-<li>van Nieuwenhuizen <em>Aspects of supergravity</em>, 2014 (<a href='http://media.scgp.stonybrook.edu/presentations/20140109_vanNieuwenhuizen.pdf'>pdf</a>)</li>
+<li>van Nieuwenhuizen <em>Some personal recollections about the discovery of supergravity</em>, 1993 (<a href='http://www.iaea.org/inis/collection/NCLCollectionStore/_Public/30/028/30028372.pdf'>pdf</a>, <a class='existingWikiWord' href='/nlab/files/vanNieuwenhuizen1993.pdf' title='pdf'>pdf</a>)</li>
 </ul>
 
 <p>Part of this story also appears as</p>
@@ -338,7 +336,7 @@ margin-left: 0em;
 <li>David Appell, <em>When supergravity was born</em>, 2012 (<a href='http://www.davidappell.com/articles/PWSep12appell-supergravity.pdf'>pdf</a>)</li>
 </ul>
 
-<h2 id='related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_05e2d16df22e876cc4d46e6e6b185e8b4fc1b3b5_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+<h2 id='related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_8a4565ffb269810b84e2a2fd4a2158e34ec6889b_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/supergravity'>supergravity</a></li>
@@ -348,19 +346,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January 11, 2017 16:14:26 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (83.208.22.80)
+  <p>
+  Last revised on April 17, 2018 at 12:59:08.
+  See the <a href="https://ncatlab.org/nlab/history/Peter van Nieuwenhuizen" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Peter+van+Nieuwenhuizen" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Peter+van+Nieuwenhuizen/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Peter+van+Nieuwenhuizen" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Peter+van+Nieuwenhuizen" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/Peter+van+Nieuwenhuizen" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Peter+van+Nieuwenhuizen/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Peter+van+Nieuwenhuizen" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Peter+van+Nieuwenhuizen" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/Peter+van+Nieuwenhuizen" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/Peter+van+Nieuwenhuizen" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/Peter+van+Nieuwenhuizen" id="view_source" rel="nofollow">Source</a>
