--- a/pages/17975.html
+++ b/pages/17975.html
@@ -290,12 +290,10 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/7697/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -471,7 +469,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/finite+quantum+mechanics+in+terms+of+dagger-compact+categories'>in terms of †-compact categories</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/finite+quantum+mechanics+in+terms+of+dagger-compact+categories'>in terms of ∞-compact categories</a></p>
 </li>
 
 <li>
@@ -942,6 +940,10 @@ margin-left: 0em;
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/quark'>quark</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/top+quark'>top quark</a></li>
+</ul>
 </li>
 
 <li>
@@ -981,9 +983,9 @@ margin-left: 0em;
 
 <p><strong><a class='existingWikiWord' href='/nlab/show/MSSM'>minimally extended supersymmetric standard model</a></strong></p>
 
-<p><strong><a class='existingWikiWord' href='/nlab/show/super+multiplet'>superpartner</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>gauge field</a> <a class='existingWikiWord' href='/nlab/show/fermion'>fermions</a></strong></p>
+<p><strong><a class='existingWikiWord' href='/nlab/show/super+multiplet'>superpartners</a></strong></p>
 
-<p><a class='existingWikiWord' href='/nlab/show/fermion'>fermions</a>:</p>
+<p>bosinos:</p>
 
 <ul>
 <li>
@@ -993,12 +995,16 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/gaugino'>gaugino</a> - <a class='existingWikiWord' href='/nlab/show/super+Yang-Mills+theory'>super Yang-Mills field</a></p>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/gluino'>gluino</a></p>
+</li>
 </ul>
 
-<p><a class='existingWikiWord' href='/nlab/show/boson'>bosons</a>:</p>
+<p><a class='existingWikiWord' href='/nlab/show/sfermion'>sfermions</a>:</p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/gluino'>gluino</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/squark'>squark</a></li>
 </ul>
 
 <p><strong>Exotica</strong></p>
@@ -1178,6 +1184,12 @@ margin-left: 0em;
 </li>
 </ul>
 
+<p>Claim that the galaxy core-cusp problem is not resolved after all id discussed in</p>
+
+<ul>
+<li>Heling Deng, Mark P. Hertzberg, Mohammad Hossein Namjoo, Ali Masoumi, <em>Can Light Dark Matter Solve the Core-Cusp Problem?</em> (<a href='https://arxiv.org/abs/1804.05921'>arXiv:1804.05921</a>)</li>
+</ul>
+
 <p>
  
 </p>
@@ -1187,19 +1199,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January 29, 2018 08:15:38 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (82.202.112.231)
+  <p>
+  Last revised on April 18, 2018 at 02:16:03.
+  See the <a href="https://ncatlab.org/nlab/history/fuzzy dark matter" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/fuzzy+dark+matter" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/fuzzy+dark+matter/11" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(11 revisions)</span> | <a href="/nlab/show/diff/fuzzy+dark+matter" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/fuzzy+dark+matter" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/fuzzy+dark+matter" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/fuzzy+dark+matter/12" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(12 revisions)</span> | <a href="/nlab/show/diff/fuzzy+dark+matter" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/fuzzy+dark+matter" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/fuzzy+dark+matter" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/fuzzy+dark+matter" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/fuzzy+dark+matter" id="view_source" rel="nofollow">Source</a>
